feat:section-two

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel =" folha de estilo" href =" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css " integridade =" sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ== " crossorigin =" anônimo " referrerpolicy =" no-referrer " />
+    <script src =" https://kit.fontawesome.com/c956011b77.js " crossorigin =" anonymous " > </script>
     <title>JEZ SALAD</title>
 </head>
 <body>
@@ -59,5 +61,74 @@
         </div>
 
     </header>
+
+    <section class="section-two">
+            <div class="section-two-subtitle">
+                <div>
+                    <h2>Porque nos escolher para ter uma <span class="chega">alimentação saudável?</span> </h2>
+                </div>
+                <div>
+                    <p>Sempre escolhemos e mantemos a qualidade da fruta servida de forma consistente, para que se mantenha fresca e nutritiva quando a consumir.</p>
+                </div>
+            </div>
+
+            <div class="section-two-information">
+                <div class="information">
+                    <img src="assets/predio.svg" alt="">
+                    <div class="title-information">
+                    <h3>Pomar Próprio</h3>
+
+                    </div>
+                    <div class="text-information">
+                        <p>Direto do próprio jardim
+                            espalhados em filiais em todos os estados Brasileiros </p>
+                    </div>
+                        <div class="button-arrow">
+                        <button class="arrow">Saiba mais </button>
+                        </div>
+                </div>
+                <div class="information">
+                    <img src="assets/firts.svg" alt="">
+                    
+                    <div class="title-information">
+                        <h3>#1 Salada de Frutas Saudável</h3>
+                    </div>
+
+                    <div>
+                        <p class="text-information">Pioneiro em saladas de frutas saudáveis, deliciosas e adequadas para todas as pessoas com a melhor garantia de qualidade.</p>
+                    </div>
+
+                    <div class="button-arrow">
+                        <button class="arrow">Saiba mais </button>
+                    </div>
+
+                </div>
+
+                <div class="information">
+                    <img src="assets/trofeu.svg" alt="">
+                    <div class="title-information">
+
+                    <h3>100 Melhores Marcas</h3>
+
+                    </div>
+                    <div class="text-information">
+                        <p>Somos uma das melhores marcas do
+                            Setor de Alimentos e Bebidas
+                            No Brasil.</p>
+                    </div>
+                        <div class="button-arrow">
+                        <button class="arrow">Saiba mais </button>
+                        </div>
+                </div>
+
+
+
+
+            </div>
+
+
+
+
+    </section>
 </body>
 </html>
