feat:section-three

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="section-three-information">
             <div class="text-h2">
-                <h2>O que as pessoas estão dizendo sobre nós</h2>
+                <h2>O que as pessoas estão dizendo <span class="chega">sobre nós</span> </h2>
             </div>
 
             <div class="text-p">
@@ -144,14 +144,38 @@
 
         <div class="opnions">
             <div class="opnion-content">
-                s
+                <div class="img-opnion">
+                    <img src="assets/opnion01.png" alt="">
+                </div>
+                <div class="text-opnion">
+                    <h3>Andromaca a cita</h3>
+                    <span>22 Anos</span>
+                    <p>
+                        A salada é fresca!!! Não pergunte mais sobre o molho, está uma delícia mesmo, vai virar rotina. Eu recomendo esta salada para todos vocês! porque eles realmente cuidam da qualidade.</p>
+                </div>
             </div>
 
             <div class="opnion-content">
-                s
+                <div class="img-opnion">
+                    <img src="assets/opinion02.png" alt="">
+                </div>
+                <div class="text-opnion">
+                    <h3>Raimunda</h3>
+                    <span>24 Anos</span>
+                    <p>
+                        A salada é fresca!!! Não pergunte mais sobre o molho, está uma delícia mesmo, vai virar rotina. Eu recomendo esta salada para todos vocês! porque eles realmente cuidam da qualidade.</p>
+                </div>
             </div>
             <div class="opnion-content">
-                s
+                <div class="img-opnion">
+                    <img src="assets/opnion03.png" alt="">
+                </div>
+                <div class="text-opnion">
+                    <h3>Atreus</h3>
+                    <span>33 Anos</span>
+                    <p>
+                        A salada é fresca!!! Não pergunte mais sobre o molho, está uma delícia mesmo, vai virar rotina. Eu recomendo esta salada para todos vocês! porque eles realmente cuidam da qualidade.</p>
+                </div>
             </div>
 
         </div>
