feat:section-four

--- a/index.html
+++ b/index.html
@@ -182,5 +182,51 @@
 
 
     </section>
+
+    <section class="section-four">
+        
+        <div class="title-section-four">
+
+            <h3>Um cardápio variado que  você vai amar!</h3>
+            <h2>Aproveite o melhor cardápio e ganhe <span class="chega">desconto</span> disponíveis </h2>
+
+        </div>
+
+        <div class="banner-salad">
+
+            <div class="salada-1">
+                <div class="salada-text">
+                    <span>Salada Delícia vermelha</span>
+                    <h3>R$ 22,99</h3>
+                </div>
+            </div>
+
+            <div class="salada-2">
+                <div class="salada-text">
+                    <span>Salada Delícia branca</span>
+                    <h3>R$ 19,99</h3>
+                </div>
+
+            </div>
+
+            <div class="salada-3">
+                <div class="salada-text">
+                    <span>Salada Delícia Mix 2</span>
+                    <h3>R$ 23,99</h3>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+        <div>
+
+        </div>
+
+
+
+    </section>
 </body>
 </html>
