feat:section-five

--- a/index.html
+++ b/index.html
@@ -216,15 +216,26 @@
                 </div>
             </div>
 
+    </section>
 
+    <section class="section-five"> 
 
+        <div class="subscribe">
+                <div class="text-subscribe">
+                    <h2>Se inscreva</h2>
+                    <h3>Inscreva-se para receber as últimas
+                        Promoções de Jez Salad</h3>
+                    <p>
+                        Recomendamos que você se inscreva em nosso programa promocional,
+                        deixe seu e-mail abaixo para obter atualizações diárias sobre nós</p>
+                </div>
 
+                <div class="input">
+
+                    <input type="email" placeholder="Digite seu email">
+                    <button>Inscrever</button>
+                </div>
         </div>
-
-        <div>
-
-        </div>
-
 
 
     </section>
