--- a/index.html
+++ b/index.html
@@ -239,5 +239,57 @@
 
 
     </section>
+
+    <footer>
+
+        <div class="footer-elements">
+
+            <div class="logo-footer">
+
+                <img src="assets/logo.svg" alt="">
+                <h3>
+                    Jez Salad é o pioneiro da salada de frutas saudável com alta nutrição.</h3>
+
+                <span>&copy; Copyright Jez Salad</span>
+
+            </div>
+
+            <div class="feature-footer">
+                    <h3>Feature</h3>
+                <ul>
+                    <li><a href="">Menu</a></li>
+                    <li><a href="">Promo</a></li>
+                    <li><a href="">Contato</a></li>
+                    <li><a href="">Sobre nós</a></li>
+
+
+
+                </ul>
+            </div>
+
+            <div class="contatos-footer">
+                <h3>Nossos contatos</h3>
+
+                <ul>
+                    <li>Avenida Minas Gerais 504, Centro, Arapoema-TO</li>
+                    <li>vinkario@gmail.com</li>
+                    <li>+55 (63)99105-7947</li>
+                </ul>
+            </div>
+
+            <div class="social-media-footer">
+                
+                <div class="icons-social-media">
+                <a href=""><img src="assets/inta.svg" alt="#"></a> 
+                <a href=""> <img src="assets/linkedin.svg" alt=""></a>
+                <a href=""><img src="assets/twitter.svg" alt=""></a>
+                </div>
+                <h3>Nos siga nas redes sociais</h3>
+            </div>
+
+        </div>
+
+
+    </footer>
 </body>
 </html>
