--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/salad.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel =" folha de estilo" href =" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css " integridade =" sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ== " crossorigin =" anônimo " referrerpolicy =" no-referrer " />
     <script src =" https://kit.fontawesome.com/c956011b77.js " crossorigin =" anonymous " > </script>
-    <title>JEZ SALAD</title>
+    <title>Jez Salad</title>
 </head>
 <body>
     <header>
@@ -278,7 +279,7 @@
             </div>
 
             <div class="social-media-footer">
-                
+
                 <div class="icons-social-media">
                 <a href=""><img src="assets/inta.svg" alt="#"></a> 
                 <a href=""> <img src="assets/linkedin.svg" alt=""></a>
